Fix style on Firefox

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
   margin: 0;
+  min-height: 100vh;
   max-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
